Building Complex Button Animation Part 1

--- a/advanced-css-courses/Natours/starter/index.html
+++ b/advanced-css-courses/Natours/starter/index.html
@@ -28,6 +28,8 @@
                     </span>
                 </h1>
                 
+                <a href="#" class="btn btn-white">Discover our tours</a>
+
             </div>
 
         </header>
