--- a/advanced-css-courses/Natours/starter/index.html
+++ b/advanced-css-courses/Natours/starter/index.html
@@ -32,10 +32,10 @@
 
             </div>
 
-        </header>
+        </header> 
 
         <!--
-        <section class="grid-test">
+        <section class="grid-test"> gg
             <div class="row">
                 <div class="col-1-of-2">Col 1 of 2</div>
                 <div class="col-1-of-2">Col 1 of 2</div>
